Wikipedia search with debounce

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <header>
+      <img
+        src="img/wikipedia-logo.png"
+        alt="Wikipedia logo"
+        title="Wikipedia logo"
+      />
+
+      <h1>Wikipedia Search</h1>
+
+      <input
+        type="text"
+        id="search-term"
+        name="search-term"
+        placeholder="Enter a search term..."
+      />
+    </header>
+    <main id="search-result"></main>
     <script src="js/app.js"></script>
   </body>
 </html>
