--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         type="text"
         id="search-term"
         name="search-term"
-        placeholder="Enter a search term..."
+        placeholder="Kenya lentsoe kapa polelo mona..."
       />
     </header>
     <main id="search-result"></main>
